--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"rhumsaa/uuid": "~2.8",
+		"moontoast/math": "*",
+		"doctrine/dbal": "2.5.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
